gfx/layers/wr/WebRenderTextureHost.cpp
@@ -69,18 +69,61 @@ void WebRenderTextureHost::CreateRenderTextureHost(
 }
 
 bool WebRenderTextureHost::Lock() {
-  MOZ_ASSERT_UNREACHABLE("unexpected to be called");
+  MOZ_ASSERT(!mWrappedTextureHost.get() ||
+             mWrappedTextureHost->AsBufferTextureHost());
+
+  if (mWrappedTextureHost && mWrappedTextureHost->AsBufferTextureHost()) {
+    return mWrappedTextureHost->Lock();
+  }
   return false;
 }
 
 void WebRenderTextureHost::Unlock() {
-  MOZ_ASSERT_UNREACHABLE("unexpected to be called");
+  MOZ_ASSERT(!mWrappedTextureHost.get() ||
+             mWrappedTextureHost->AsBufferTextureHost());
+
+  if (mWrappedTextureHost && mWrappedTextureHost->AsBufferTextureHost()) {
+    mWrappedTextureHost->Unlock();
+  }
+}
+
+void WebRenderTextureHost::PrepareTextureSource(
+    CompositableTextureSourceRef& aTexture) {
+  MOZ_ASSERT(!mWrappedTextureHost.get() ||
+             mWrappedTextureHost->AsBufferTextureHost());
+
+  if (mWrappedTextureHost && mWrappedTextureHost->AsBufferTextureHost()) {
+    mWrappedTextureHost->PrepareTextureSource(aTexture);
+  }
 }
 
 bool WebRenderTextureHost::BindTextureSource(
     CompositableTextureSourceRef& aTexture) {
-  MOZ_ASSERT_UNREACHABLE("unexpected to be called");
+  MOZ_ASSERT(!mWrappedTextureHost.get() ||
+             mWrappedTextureHost->AsBufferTextureHost());
+
+  if (mWrappedTextureHost && mWrappedTextureHost->AsBufferTextureHost()) {
+    return mWrappedTextureHost->BindTextureSource(aTexture);
+  }
   return false;
+}
+
+void WebRenderTextureHost::UnbindTextureSource() {
+  if (mWrappedTextureHost && mWrappedTextureHost->AsBufferTextureHost()) {
+    mWrappedTextureHost->UnbindTextureSource();
+  }
+}
+
+void WebRenderTextureHost::SetTextureSourceProvider(
+    TextureSourceProvider* aProvider) {
+  // During using WebRender, only BasicCompositor could exist
+  MOZ_ASSERT(!aProvider || aProvider->AsBasicCompositor());
+  MOZ_ASSERT(!mWrappedTextureHost.get() ||
+             mWrappedTextureHost->AsBufferTextureHost());
+
+  if (mWrappedTextureHost && mWrappedTextureHost->AsBufferTextureHost()) {
+    mWrappedTextureHost->SetTextureSourceProvider(aProvider);
+  }
 }
 
 already_AddRefed<gfx::DataSourceSurface> WebRenderTextureHost::GetAsSurface() {
@@ -89,9 +132,6 @@ already_AddRefed<gfx::DataSourceSurface> WebRenderTextureHost::GetAsSurface() {
   }
   return mWrappedTextureHost->GetAsSurface();
 }
-
-void WebRenderTextureHost::SetTextureSourceProvider(
-    TextureSourceProvider* aProvider) {}
 
 gfx::YUVColorSpace WebRenderTextureHost::GetYUVColorSpace() const {
   if (mWrappedTextureHost) {
